feat: login whatsapp on startup
- configurable
- wip: add sync status, so bot won't run when all of it isn't synced

--- a/config.yml.example
+++ b/config.yml.example
@@ -4,6 +4,7 @@ app:
   public_dir: ../public/
   session_secret: secretkey-123
   auth_duration: 24h
+  auto_whatsapp_login: true # whatsapp login during startup
 
   # DEBUG || INFO ||  WARN || ERROR
   log_level: DEBUG
